Fixed bug where new tweets will cause profile avatar and name to stretch with the new tweets

--- a/public/styles/dynamic-styles.css
+++ b/public/styles/dynamic-styles.css
@@ -1,13 +1,14 @@
 @media only screen and (min-width: 1024px) {
   body {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    /* justify-content: center; */
   }
   header.profile {
     display: flex;
     width: 50%;
     margin-left: 5%;
+    margin-top: 190px;
   }
   
   main.container {
